<?xml version="1.0"?>
<package>
  <name>miniros_description</name>
  <version>0.0.0</version>
  <description>The miniros_description package</description>

  <maintainer email="robotlabvn@gmail.com">robotlab</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
